samples/_failures_safe/1761706949_0062fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc557d47.c: In function ‘main’:
./samples/SAFE/__tmp_cc557d47.c:149:5: error: expected expression at end of input
  149 |     if (quality_input >
      |     ^~
./samples/SAFE/__tmp_cc557d47.c:149:5: error: expected declaration or statement at end of input
